<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".login.LoginActivity"
    tools:targetApi="o">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <ImageView
            android:layout_width="@dimen/Logo_width"
            android:layout_height="@dimen/Logo_height"
            android:layout_centerInParent="true"
            android:contentDescription="@string/description_logo"
            android:src="@mipmap/ic_launcher" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/very_large_margin"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">


        <EditText
            android:id="@+id/login_edTx_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:autofillHints="@string/login_email"
            android:drawablePadding="@dimen/normal_margin"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="@dimen/normal_height_button"
            android:paddingHorizontal="@dimen/normal_margin"

            android:paddingBottom="@dimen/large_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textDirection="ltr" />

        <EditText
            android:id="@+id/login_edTx_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:autofillHints="login_password"

            android:drawablePadding="@dimen/normal_margin"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="@dimen/normal_height_button"
            android:paddingHorizontal="@dimen/normal_margin"
            android:paddingBottom="@dimen/large_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textDirection="ltr" />


<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->


<!--        </RelativeLayout>-->


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn_signIn"
            android:layout_width="@dimen/button_width_normal"
            android:layout_height="@dimen/button_normal_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@drawable/button_blue"
            android:text="@string/login_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/login_txVw_forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:gravity="center"
            android:text="@string/login_forgot_password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <!--<Button-->
        <!--android:id="@+id/but_sign_up"-->
        <!--android:layout_width="@dimen/button_width_normal"-->
        <!--android:layout_height="@dimen/button_normal_height"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginBottom="@dimen/normal_margin"-->
        <!--android:layout_marginTop="@dimen/normal_margin"-->
        <!--android:background="@drawable/button_primary_lite"-->
        <!--android:text="@string/sign_up"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="@dimen/large_text"-->
        <!--android:textStyle="bold" />-->
    </LinearLayout>


</LinearLayout>